--- a/Day 1-Drum Kit/index.html
+++ b/Day 1-Drum Kit/index.html
@@ -140,8 +140,10 @@
     keys.forEach(key => {
       key.addEventListener('transitionend', removeTransition1)
     });
-    console.log(keys);
-    document.body.style.backgroundSize = '100% auto contain';
+    document.body.style.backgroundRepeat = 'no-repeat';
+    document.body.style.backgroundPosition = 'center';
+    document.body.style.backgroundAttachment = 'fixed';
+    document.body.style.backgroundSize = 'cover';
   </script>
 
 
